ACLOCAL_AMFLAGS = -I m4

lib_LTLIBRARIES = schunk_ped.la
schunk_ped_la_SOURCES = schunk_ped.c
schunk_ped_la_LDFLAGS = -shared -module

lib_LTLIBRARIES += lwa4d.la
lwa4d_la_SOURCES = lwa4d.c
lwa4d_la_LDFLAGS = -shared -module

lib_LTLIBRARIES += schunk_table.la
schunk_table_la_SOURCES = schunk_table.c
schunk_table_la_LDFLAGS = -shared -module
