ACLOCAL_AMFLAGS = -I m4

lib_LTLIBRARIES = schunk_with_table.la
schunk_with_table_la_SOURCES = schunk_with_table.c
schunk_with_table_la_LDFLAGS = -shared -module

lib_LTLIBRARIES += lwa4d.la
lwa4d_la_SOURCES = lwa4d.c
lwa4d_la_LDFLAGS = -shared -module

lib_LTLIBRARIES += schunk_on_table.la
schunk_on_table_la_SOURCES = schunk_on_table.c
schunk_on_table_la_LDFLAGS = -shared -module

lib_LTLIBRARIES += q0.la
q0_la_SOURCES = q0.c
q0_la_LDFLAGS = -shared -module

lib_LTLIBRARIES += goal.la
goal_la_SOURCES = goal.c
goal_la_LDFLAGS = -shared -module
